--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "dependencies": {
     "phantom": "<=0.3.5",
     "plugapi": ">=0.2.0",
-    "repl": ">=0.1.3"
+    "repl": ">=0.1.3",
+    "restler": ">=2.0.1",
+    "google": ">=0.1.0"
   },
   "devDependencies": {
     "phantom": "<=0.3.5",
