--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "plugapi": ">=0.2.0",
     "repl": ">=0.1.3",
     "restler": ">=2.0.1",
+    "mongoose": ">=3.4.0",
     "google": ">=0.1.0"
   },
   "devDependencies": {
