--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "repl": ">=0.1.3",
     "restler": ">=2.0.1",
     "mongoose": ">=3.4.0",
-    "google": ">=0.1.0"
+    "google": ">=0.1.0",
+    "express": ">=3.0.3"
   },
   "devDependencies": {
     "phantom": "<=0.3.5",
