--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "restler": ">=2.0.1",
     "mongoose": ">=3.4.0",
     "google": ">=0.1.0",
-    "express": ">=3.0.3"
+    "express": ">=3.0.3",
+    "jade": ">=0.27.7"
   },
   "devDependencies": {
     "phantom": "<=0.3.5",
