--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mongoose": ">=3.4.0",
     "google": ">=0.1.0",
     "express": ">=3.0.3",
-    "jade": ">=0.27.7"
+    "jade": ">=0.27.7",
+    "underscore": ">=1.4.2"
   },
   "devDependencies": {
     "phantom": "<=0.3.5",
