--- a/config.js.example
+++ b/config.js.example
@@ -4,4 +4,7 @@ module.exports = {
   , adminIds : ["14022630"] //Array of users who have access to admin commands
   , auth : "sdH4wfhWSEthrS6za3dfHs6df2k=?_expires=SADshDfEhe3SfHa6Hs==&user_id=UFasdgsdgjSdfGSgtFDt7asgw3sHfdsg7zaasFg6afs=" // fake key, lololololol
   , room : 'coding-soundtrack'
+  , ga: {
+      account: '' // accountID for Google Analytics, if you want it.
+    }
 }
