--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "google": ">=0.1.0",
     "express": ">=3.0.3",
     "jade": ">=0.27.7",
-    "underscore": ">=1.4.2"
+    "underscore": ">=1.4.2",
+    "async": ">=0.1.22"
   },
   "devDependencies": {
     "phantom": "<=0.3.5",
