--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "express": ">=3.0.3",
     "jade": ">=0.27.7",
     "underscore": ">=1.4.2",
-    "async": ">=0.1.22"
+    "async": ">=0.1.22",
+    "crypto": ">= 0.0.3",
+    "xml2js": ">= 0.1.13",
+    "querystring": ">= 0.1.0",
+    "jquery": ">= 1.6.3"
   },
   "devDependencies": {
     "phantom": "<=0.3.5",
