--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "crypto": ">= 0.0.3",
     "xml2js": ">= 0.1.13",
     "querystring": ">= 0.1.0",
-    "jquery": ">= 1.6.3"
+    "jquery": ">= 1.6.3",
+    "node-markdown": ">= 0.1.1"
   },
   "devDependencies": {
     "phantom": "<=0.3.5",
