--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "async": ">=0.1.22",
+    "cli-color": ">=0.2.1",
     "crypto": ">= 0.0.3",
     "express": ">=3.0.3",
     "github": ">=0.1.7",
