added .gitignore for webstorm ide

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
 /config.js
+
+.idea/.name
+
+.idea/encodings.xml
+
+.idea/libraries/sass_stdlib.xml
+
+.idea/misc.xml
+
+.idea/modules.xml
+
+.idea/scopes/scope_settings.xml
+
+.idea/vcs.xml
+
+.idea/snarl.iml
+
+.idea/workspace.xml
