--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
     "jade": ">=0.27.7",
     "underscore": ">=1.4.2",
     "async": ">=0.1.22",
-    "crypto": ">= 0.0.3",
-    "xml2js": ">= 0.1.13",
-    "querystring": ">= 0.1.0",
-    "jquery": ">= 1.6.3",
-    "node-markdown": ">= 0.1.1"
+    "crypto": ">=0.0.3",
+    "xml2js": ">=0.1.13",
+    "querystring": ">=0.1.0",
+    "jquery": ">=1.6.3",
+    "node-markdown": ">=0.1.1",
+    "ddg-api": ">=0.1.1",
+    "urban": ">=0.3.0",
+    "github": ">=0.1.8",
+    "timeago": ">=0.1.0"
   },
   "devDependencies": {
     "phantom": "<=0.3.5",
