--- a/package.json
+++ b/package.json
@@ -1,50 +1,46 @@
 {
   "author": {
-    "name"	: "Eric Martindale",
-    "email"	: "eric@ericmartindale.com"
+    "name": "Eric Martindale",
+    "email": "eric@ericmartindale.com"
   },
-  "name"	: "snarl",
-  "description"	: "snarl, a bot based on @chrisinajar's plugapi",
-  "homepage"	: "https://github.com/martindale/snarl",
-  "version"	: "0.0.1",
-  "repository"	: {
-    "type"	: "git",
-    "url"	: "https://github.com/martindale/snarl"
+  "name": "snarl",
+  "description": "snarl, a bot based on @chrisinajar's plugapi",
+  "homepage": "https://github.com/martindale/snarl",
+  "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/martindale/snarl"
   },
-  "main"	: "bot.js",
-  "engines"	: {
-    "node"	: ">=v0.4.9"
+  "main": "bot.js",
+  "engines": {
+    "node": ">=v0.4.9"
   },
   "dependencies": {
-    "phantom"	: "<=0.3.5",
-    "plugapi"	: ">=0.2.0",
-    "repl"	: ">=0.1.3",
-    "restler"	: ">=2.0.1",
-    "mongoose"	: ">=3.4.0",
-    "google"	: ">=0.1.0",
-    "express"	: ">=3.0.3",
-    "jade"	: ">=0.27.7",
+    "phantom": "<=0.3.5",
+    "plugapi": ">=0.2.0",
+    "repl": ">=0.1.3",
+    "restler": ">=2.0.1",
+    "mongoose": ">=3.4.0",
+    "google": ">=0.1.0",
+    "express": ">=3.0.3",
+    "jade": ">=0.27.7",
     "underscore": ">=1.4.2",
-    "async"	: ">=0.1.22",
-    "crypto"	: ">= 0.0.3",
-    "xml2js"	: ">= 0.1.13",
+    "async": ">=0.1.22",
+    "crypto": ">= 0.0.3",
+    "xml2js": ">= 0.1.13",
     "querystring": ">= 0.1.0",
-    "jquery"	: ">= 1.6.3",
-    "node-markdown": ">= 0.1.1",
-    "ddg-api"	: ">= 0.0.1",
-    "github" 	: ">= 0.1.8",
-    "timeago"   : ">= 0.1.0",
-    "urban"  	: ">= 0.2.0"	 		
+    "jquery": ">= 1.6.3",
+    "node-markdown": ">= 0.1.1"
   },
   "devDependencies": {
-    "phantom"	: "<=0.3.5",
-    "plugapi"	: ">=0.2.0",
-    "repl"	: ">=0.1.3"
+    "phantom": "<=0.3.5",
+    "plugapi": ">=0.2.0",
+    "repl": ">=0.1.3"
   }, 
-  "licenses"	: {
-    "type"	: "MIT",
-    "url"	: "http://www.opensource.org/licenses/MIT"
+  "licenses": {
+    "type": "MIT",
+    "url": "http://www.opensource.org/licenses/MIT"
   },
-  "readme"	: "# snarl",
-  "_id"		: "snarl"
+  "readme": "# snarl",
+  "_id": "snarl"
 }
