Move to centralized models.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "querystring": ">= 0.1.0",
     "jquery": ">= 1.6.3",
     "node-markdown": ">= 0.1.1",
-    "twss": "~0.1.6"
+    "twss": "~0.1.6",
+    "passport": "~0.1.17",
+    "passport-local-mongoose": "~0.2.3"
   },
   "devDependencies": {
     "phantom": "<=0.3.5",
