--- a/package.json
+++ b/package.json
@@ -16,29 +16,29 @@
     "node": ">=v0.4.9"
   },
   "dependencies": {
-    "phantom": "<=0.3.5",
-    "plugapi": ">=0.2.0",
-    "repl": ">=0.1.3",
-    "restler": ">=2.0.1",
-    "mongoose": ">=3.4.0",
-    "google": ">=0.1.0",
-    "express": "^3.5.1",
-    "jade": ">=0.27.7",
-    "underscore": ">=1.4.2",
     "async": ">=0.1.22",
+    "coffee-script": "~1.6.3",
     "crypto": ">= 0.0.3",
-    "xml2js": ">= 0.1.13",
-    "querystring": ">= 0.1.0",
+    "ddg-api": "0.0.1",
+    "express": "^3.5.1",
+    "github": "^0.1.16",
+    "google": ">=0.1.0",
+    "jade": ">=0.27.7",
     "jquery": ">= 1.6.3",
+    "mongoose": ">=3.4.0",
     "node-markdown": ">= 0.1.1",
-    "twss": "~0.1.6",
     "passport": "~0.1.17",
     "passport-local-mongoose": "~0.2.3",
-    "coffee-script": "~1.6.3",
-    "ddg-api": "0.0.1",
+    "phantom": "<=0.3.5",
+    "plugapi": ">=0.2.0",
+    "querystring": ">= 0.1.0",
+    "repl": ">=0.1.3",
+    "restler": ">=2.0.1",
+    "timeago": "^0.1.0",
+    "twss": "~0.1.6",
+    "underscore": "^1.7.0",
     "urban": "^0.2.0",
-    "github": "^0.1.16",
-    "timeago": "^0.1.0"
+    "xml2js": ">= 0.1.13"
   },
   "devDependencies": {
     "phantom": "<=0.3.5",
