--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "google": ">=0.1.0",
     "jade": ">=0.27.7",
     "jquery": ">= 1.6.3",
+    "lodash": "^3.10.1",
     "mongoose": ">=3.4.0",
     "node-markdown": ">= 0.1.1",
+    "node-slack": "0.0.7",
+    "oxford-join": "0.0.1",
     "passport": "~0.1.17",
     "passport-local-mongoose": "~0.2.3",
     "phantom": "<=0.3.5",
