--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "querystring": ">= 0.1.0",
     "repl": ">=0.1.3",
     "restler": ">=2.0.1",
+    "slack-client": "^1.4.1",
     "timeago": "^0.1.0",
     "twss": "~0.1.6",
     "underscore": "^1.7.0",
