--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "email": "eric@ericmartindale.com"
   },
   "name": "snarl",
-  "description": "snarl, a bot based on @chrisinajar's plugapi",
+  "description": "snarl is a big soft gorilla that helps us in chat.",
   "homepage": "https://github.com/martindale/snarl",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/martindale/snarl"
@@ -21,6 +21,15 @@
     "oxford-join": "0.0.1",
     "slack-client": "^1.4.1"
   },
+  "keywords": [
+    "slack",
+    "bot",
+    "chat",
+    "triggers",
+    "ai",
+    "machine learning",
+    "snarl"
+  ],
   "licenses": {
     "type": "MIT",
     "url": "http://www.opensource.org/licenses/MIT"
