--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "async": "^1.5.0",
+    "cleverbot-node": "^0.2.1",
     "erm": "0.0.1",
     "lodash": "^3.10.1",
     "oxford-join": "0.0.1",
