--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": ">=v0.4.9"
   },
   "dependencies": {
+    "aiml": "0.0.2",
     "async": "^1.5.0",
     "cleverbot-node": "^0.2.1",
     "erm": "0.0.1",
