--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "name": "snarl",
   "description": "snarl is a big soft gorilla that helps us in chat.",
   "homepage": "https://github.com/martindale/snarl",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/martindale/snarl"
@@ -20,6 +20,7 @@
     "cleverbot-node": "^0.2.1",
     "erm": "0.0.1",
     "lodash": "^3.10.1",
+    "maki": "git://github.com/martindale/maki",
     "oxford-join": "0.0.1",
     "restler": "^3.4.0",
     "slack-client": "^1.5.0"
