Fix minor bug in autoloading.

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "preferGlobal": true,
   "scripts": {
+    "start": "node snarl.js",
     "test": "mocha",
     "coverage": "istanbul cover _mocha"
   },
