--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "maki-remote": "git://github.com/martindale/maki-remote#events",
     "oxford-join": "0.0.1",
     "restler": "^3.4.0",
-    "slack-client": "^1.5.0"
+    "slack-client": "^1.5.0",
+    "snarl-community": "git://github.com/martindale/snarl-community"
   },
   "keywords": [
     "slack",
