--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "node": ">= 8.0.0"
   },
   "dependencies": {
-    "doorman": "FabricLabs/doorman#63b62fa5bb0eb7ffcc649b531df064ac32655b66"
+    "doorman": "FabricLabs/doorman#2a658fcbec2c38feb9c3056f3f83b681a1b16497",
+    "erm": "0.0.1",
+    "maki": "github:FabricLabs/maki"
   },
   "keywords": [
     "slack",
