--- a/package.json
+++ b/package.json
@@ -38,13 +38,15 @@
   "devDependencies": {
     "coveralls": "^3.0.2",
     "istanbul": "^0.4.5",
+    "jsdoc": "^3.5.5",
     "mocha": "^5.2.0"
   },
   "preferGlobal": true,
   "scripts": {
     "start": "node snarl.js",
     "test": "mocha",
-    "coverage": "istanbul cover _mocha"
+    "coverage": "istanbul cover _mocha",
+    "make:docs": "jsdoc lib/ README.md -d docs/"
   },
   "license": "MIT"
 }
