--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
   "scripts": {
     "docs": "npm run make:docs && http-server docs/",
     "start": "node snarl.js",
-    "test": "mocha",
-    "coverage": "istanbul cover _mocha",
+    "test": "mocha --exit",
+    "coverage": "istanbul cover _mocha -- --exit",
     "make:docs": "jsdoc lib/ README.md -c jsdoc.json -d docs/",
     "review:coverage": "npm run coverage && http-server coverage/lcov-report"
   },
