--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "doorman": "FabricLabs/doorman#2a658fcbec2c38feb9c3056f3f83b681a1b16497",
     "erm": "0.0.1",
-    "maki": "FabricLabs/maki#fabric"
+    "maki": "FabricLabs/maki#4db636cc3685d098b151235b0df78f89c52780d7"
   },
   "keywords": [
     "slack",
