--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "start": "node snarl.js",
     "test": "mocha --exit",
     "coverage": "istanbul cover _mocha -- --exit",
-    "make:docs": "jsdoc lib/ README.md -c jsdoc.json -d docs/",
+    "make:docs": "jsdoc lib/ plugins/ README.md -c jsdoc.json -d docs/",
     "review:coverage": "npm run coverage && http-server coverage/lcov-report"
   },
   "license": "MIT"
