--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "node": ">= 8.0.0"
   },
   "dependencies": {
-    "@fabric/core": "github:FabricLabs/fabric#fabric-core",
-    "doorman": "FabricLabs/doorman#6d4b2e6c3f07c8daf4e1071b61765ba9440fde40",
-    "maki": "FabricLabs/maki#4db636cc3685d098b151235b0df78f89c52780d7"
+    "@fabric/core": "FabricLabs/fabric#feature/v0.1.0-RC1",
+    "@fabric/http": "FabricLabs/fabric-http#feature/graphql",
+    "doorman": "FabricLabs/doorman#6d4b2e6c3f07c8daf4e1071b61765ba9440fde40"
   },
   "keywords": [
     "slack",
@@ -28,10 +28,12 @@
     "snarl",
     "doorman"
   ],
-  "licenses": {
-    "type": "MIT",
-    "url": "http://www.opensource.org/licenses/MIT"
-  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://www.opensource.org/licenses/MIT"
+    }
+  ],
   "bugs": {
     "url": "https://github.com/martindale/snarl/issues"
   },
@@ -45,10 +47,11 @@
   "preferGlobal": true,
   "scripts": {
     "docs": "npm run make:docs && http-server docs/",
-    "start": "node snarl.js",
+    "start": "node scripts/snarl.js",
     "test": "mocha --exit",
     "coverage": "istanbul cover _mocha -- --exit",
     "make:docs": "jsdoc lib/ plugins/ README.md -c jsdoc.json -d docs/",
+    "report:install": "rm -rf node_modules && echo \"\n\" > package-lock.json && echo \"$ npm i\" > reports/install.log && npm i >> reports/install.log",
     "review:coverage": "npm run coverage && http-server coverage/lcov-report"
   },
   "license": "MIT"
