--- a/package.json
+++ b/package.json
@@ -38,18 +38,16 @@
     "url": "https://github.com/martindale/snarl/issues"
   },
   "devDependencies": {
-    "coveralls": "^3.0.2",
-    "http-server": "^0.11.1",
-    "istanbul": "^1.1.0-alpha.1",
-    "jsdoc": "^3.5.5",
-    "mocha": "^5.2.0"
+    "http-server": "0.11.1",
+    "jsdoc": "3.5.5",
+    "mocha": "10.2.0"
   },
   "preferGlobal": true,
   "scripts": {
     "docs": "npm run make:docs && http-server docs/",
     "start": "node scripts/snarl.js",
-    "test": "mocha --exit",
-    "coverage": "istanbul cover _mocha -- --exit",
+    "test": "mocha tests",
+    "coverage": "c8 npm test",
     "make:docs": "jsdoc lib/ plugins/ README.md -c jsdoc.json -d docs/",
     "report:install": "rm -rf node_modules && echo \"\n\" > package-lock.json && echo \"$ npm i\" > reports/install.log && npm i >> reports/install.log",
     "review:coverage": "npm run coverage && http-server coverage/lcov-report"
